<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="134dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_container"
    android:paddingTop="21dp"
    android:paddingLeft="14dp"
    android:paddingBottom="19dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/station_img"
        android:layout_width="102dp"
        android:layout_height="94dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/rectangle_8"
        />

    <TextView
        android:id="@+id/station_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/station_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:text="@string/station_two_heading"
        android:textColor="@color/text"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/station_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/station_heading"
        android:text="@string/station_two_address"
        android:textSize="12sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/station_heading"
        android:layout_marginLeft="5dp"
        android:textColor="@color/text"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/station_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/station_address"
        android:text="@string/station_location"
        android:textSize="12sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/station_address"
        android:layout_marginTop="5dp"
        android:textColor="@color/text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_two_available_ports"
        android:textColor="@color/accent_yellow"
        app:layout_constraintStart_toStartOf="@id/station_loc"
        app:layout_constraintTop_toBottomOf="@id/station_loc"
        android:layout_marginLeft="1dp"
        android:textSize="14dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>