<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="195dp"
    android:paddingVertical="10dp"
    android:paddingLeft="27dp"
    android:paddingTop="22dp"
    android:background="@drawable/main_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/text"
            android:text="@string/first_cont_heading"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/battery_ic"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading"
            android:layout_marginTop="26dp"
            android:src="@drawable/ic_twotone_battery_charging_60"/>

        <TextView
            android:id="@+id/km_left_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km_left_num"
            app:layout_constraintTop_toBottomOf="@id/heading"
            app:layout_constraintStart_toEndOf="@id/battery_ic"
            android:layout_marginTop="19dp"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:textColor="@color/text"
            />

        <TextView
            android:id="@+id/km_left_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km_left_txt"
            app:layout_constraintStart_toStartOf="@id/km_left_num"
            app:layout_constraintTop_toBottomOf="@id/km_left_num"
            android:textColor="@color/text"
            android:layout_marginTop="8dp"
            android:textAllCaps="true"
            android:textSize="9sp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/charged_ic"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/battery_ic"
            android:src="@drawable/ic_round_speed"
            android:layout_marginTop="26dp"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/car_img"
            android:layout_width="0dp"
            android:layout_height="172dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/km_left_txt"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/audi_e_tron_png_clipart_background_1"
            />

        <TextView
            android:id="@+id/charged_per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charged_percent"
            android:textColor="@color/text"
            app:layout_constraintTop_toBottomOf="@id/km_left_txt"
            app:layout_constraintStart_toStartOf="@id/km_left_num"
            android:layout_marginTop="26dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charged_txt"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="@id/charged_per"
            app:layout_constraintTop_toBottomOf="@id/charged_per"
            android:textSize="9sp"
            android:textAllCaps="true"
            android:layout_marginTop="8dp"
            />


</androidx.constraintlayout.widget.ConstraintLayout>