<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/container_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/screen_bg"
            android:paddingVertical="50dp">

            <TextView
                android:id="@+id/vehicle_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="44dp"
                android:text="@string/first_heading"
                android:textColor="@color/text"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <include
                android:id="@+id/vehicle_card"
                layout="@layout/card_my_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="42dp"
                android:layout_marginTop="28dp"/>


            <TextView
                android:id="@+id/chargers_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_heading"
                android:layout_marginHorizontal="44dp"
                android:layout_marginTop="41dp"
                android:textColor="@color/text"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="44dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_txt"
                    android:textSize="14sp"
                    android:textColor="@color/text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_location"
                    android:textColor="@color/accent_purple"
                    android:layout_marginStart="4dp"
                    android:textSize="14sp"
                    android:textStyle=""/>

            </LinearLayout>

            <include
                android:id="@+id/station_one"
                layout="@layout/card_station_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="20dp"/>

            <include
                android:id="@+id/station_two"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                layout="@layout/card_station_2"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="26dp"
                />

            <include
                android:id="@+id/station_three"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                layout="@layout/card_station_3"
                android:layout_marginHorizontal="28dp"
                android:layout_marginTop="26dp"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/profile"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/mdi_user_circle_outline"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="47dp"
            app:layout_constraintEnd_toStartOf="@id/map"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list"/>

        <ImageView
            android:id="@+id/map"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toEndOf="@id/profile"
            app:layout_constraintEnd_toStartOf="@id/charge"
            android:src="@drawable/mdi_map_check_outline"
            app:layout_constraintTop_toTopOf="@id/profile"/>

        <ImageView
            android:id="@+id/charge"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintEnd_toStartOf="@id/settings"
            app:layout_constraintStart_toEndOf="@id/map"
            android:src="@drawable/material_symbols_check_circle_outline"
            app:layout_constraintTop_toTopOf="@id/profile"/>

        <ImageView
            android:id="@+id/settings"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toEndOf="@id/charge"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/uil_setting"
            app:layout_constraintTop_toTopOf="@id/profile"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>